Expose java.desktop/javax.sound.midi